force-app/main/default/objects/Alocation_History__c/Alocation_History__c.object-meta.xml
<CustomObject>
    <description>Store historical  allocation of an Accoutn related to Territory Allocator object</description>
    <label>Alocation History</label>
    <nameField>
        <displayFormat>AH-{YYYY}{MM}{DD}-{0000}</displayFormat>
        <label>Alocation History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AlocationHistories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>