force-app/main/default/objects/Alocation_History__c/fields/Allocator__c.field-meta.xml
<CustomField>
    <fullName>Allocator__c</fullName>
    <label>Allocator</label>
    <referenceTo>TerritoryAllocator__c</referenceTo>
    <relationshipLabel>AlocationHistories</relationshipLabel>
    <relationshipName>AlocationHistories</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>