force-app/main/default/objects/Alocation_History__c/fields/Alocated_Account__c.field-meta.xml
<CustomField>
    <fullName>Alocated_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Alocated Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>AlocationHistories</relationshipLabel>
    <relationshipName>AlocationHistories</relationshipName>
    <type>Lookup</type>
</CustomField>