force-app/main/default/objects/Alocation_History__c/fields/ObjTerAssocID__c.field-meta.xml
<CustomField>
    <fullName>ObjTerAssocID__c</fullName>
    <description>the ID  of  the OOTB Salesforce ObjectTerritory2Association record</description>
    <externalId>true</externalId>
    <label>ObjTerAssocID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>