force-app/main/default/objects/Alocation_History__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Allocator__c</columns>
    <columns>Alocated_Account__c</columns>
    <columns>StartDate__c</columns>
    <columns>ObjTerAssocID__c</columns>
    <columns>ExternalID__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>